--- a/LeaveManagementSystemWeb/appsettings.json
+++ b/LeaveManagementSystemWeb/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagementSystemWeb-53e98757-84ce-433a-9a9a-ef1b4971ab9b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagementSystemWeb-53e98757-84ce-433a-9a9a-ef1b4971ab9b;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=localhost;Database=LeaveManagementSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
